# ETF-InvestIQ

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Claude.md  GEMINI.md  PRD.md  README.md  Shoutcuts_for_me  docker-compose.yml
backend/: Dockerfile  alembic.ini  build_sidecar.py  pyproject.toml  run_app.py  test_sidecar.spec  test_yf.spec  test_yf_console.spec
backend/alembic/: env.py
backend/alembic/versions/: 824985a93d1d_add_architect_sessions_drawdown_.py  a1b2c3d4e5f6_add_users_and_auth.py  b8e1d2c3f4a5_add_universe_tables.py  c9d4e5f6a7b8_add_terms_acceptances.py  d1e2f3g4h5i6_add_investor_profile_to_architect_session.py  e45a69fcda1e_add_holding_is_archived.py  eaf2e2700b46_initial_schema.py  f7c3a1b2d9e0_add_initial_investment_to_goal_buckets.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: exceptions.py  i18n.py  logging.py  security.py  terms.py  validators.py
backend/app/db/: base.py  seed_universe.py  session.py
backend/app/routes/: app_settings.py  architect.py  auth.py  buckets.py  deposits.py  dividends.py  drawdown.py  health.py  holdings.py  sectors.py  universe.py  universe_admin.py  valuation.py
backend/app/schemas/: app_settings.py  architect.py  auth.py  bucket.py  deposit.py  dividend.py  drawdown.py  holding.py  sector.py  universe.py  universe_admin.py  valuation.py
backend/app/services/: architect_service.py  auth_service.py  bucket_service.py  dividend_service.py  drawdown_service.py  email_service.py  fred_client.py  (+10 more)
backend/data/: etf_universe.yaml
backend/scripts/: audit_universe.py  backup_db.py  seed_db.py
backend/tests/: conftest.py
(+185 files in other folders)
